header was changed

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -17,16 +17,17 @@
 
 <body>
     <header>
-        <h2>Header Content</h2>
+        <div class="header">
+            <h2>Header Content</h2>
+        </div>
+
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Projects</a>
+            <a href="www/">Services</a>
+            <a href="https://www.linkedin.com/in/adrianne-dumandan/">Contact Us</a>
+        </nav>
     </header>
-
-    <nav>
-        <a href="#">Home</a>
-        <a href="wwr/">Projects</a>
-        <a href="www/">Services</a>
-        <a href="https://www.linkedin.com/in/adrianne-dumandan/">Contact Us</a>
-    </nav>
-
     <div class="table">
         <main>
             <h2>Main Content</h2>
