changes to the css

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </aside>
         </section>
 
-        <section class="card">
+        <section class="card1">
             <h2>Educational Resources</h2>
             <ul class="links">
                 <li><a href="https://resourcecenter.byupathway.edu/" target="_blank">BYU Pathway Resource Center</a></li>
