Color scheme was changed.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet"> -->
+    <script src="path/to/getdates.js" defer></script>
 </head>
 
 <body>
@@ -33,17 +32,17 @@
         <section class="card">
             <h2>About Me</h2>
             <img src="images/profile.jpg" alt="Adrianne Dumandan's photo" width="200">
-            <p>Mabuhay! My name is Adrianne Dumandan, and I am from the beautiful islands of the Philippines. I am currently working remotely as a Business Development Executive, where I thrive on exploring new opportunities and continuously learning. I find beauty in small, everyday moments.</p>
+            <p>Mabuhay! My name is Adrianne Dumandan, and I am from the beautiful islands of the Philippines. I am currently working remotely as a Business Development Executive, where I thrive on exploring new opportunities and continuously learning. Watching sunsets makes me feel calm and happy. I enjoy listening to music and dancing in my free time. I find beauty in small, everyday moments.</p>
 
             <aside>
                 <h3>Davao City, Philippines</h3>
-
-                <figure class="flag">
-                <img src="images/flag.jpg" alt="Philippine Flag" width="200">
-                <figcaption>Official Flag of the Philippines</figcaption>
-                </figure>
-
-                <p>The Philippines, an archipelago of more than 7,000 islands in Southeast Asia, is renowned for its stunning beaches, rich biodiversity, and warm hospitality.  From the famous Banaue Rice Terraces to the crystal-clear waters of Boracay and Palawan, its sceneries are diverse. The Philippines offers a vibrant mix of natural beauty, history, and cultural richness that captivates visitors and locals alike.</p>
+                <div class="country">
+                    <figure class="flag">
+                        <img src="images/flag.jpg" alt="Philippine Flag" width="200">
+                        <figcaption>Official Flag of the Philippines</figcaption>
+                    </figure>
+                    <p>The Philippines, an archipelago of more than 7,000 islands in Southeast Asia, is renowned for its stunning beaches, rich biodiversity, and warm hospitality.  From the famous Banaue Rice Terraces to the crystal-clear waters of Boracay and Palawan, its sceneries are diverse. The Philippines offers a vibrant mix of natural beauty, history, and cultural richness that captivates visitors and locals alike.</p>
+                </div>
             </aside>
         </section>
 
