--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
    <footer>
     <p>
-        &copy;<span id="currentyear"></span> 🏝️ Adrianne Dumandan 🏝️ Philippines
+        &copy;<span id="currentyear"></span>
     </p>
     <p id="lastModified"></p>
     </footer>
