--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Adrianne Dumandan</title>
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals">
+    <meta name="description" content="Welcome to WDD 131 - Dynamic Web Fundamentals.">
     <meta name="author" content="Adrianne Dumandan">
 
     <link rel="stylesheet" href="styles/base.css">
