temple album added

--- a/temples.html
+++ b/temples.html
@@ -13,8 +13,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/temples.js" defer></script>
 </head>
 
@@ -22,12 +21,15 @@
 
    <header>
     <h1>Temple Album</h1>
+    <button type="button" id="menu" aria-label="Toggle Menu">&#9776;</button>
     <nav>
-        <a ref="">Home</a>
-        <a ref="">Old</a>
-        <a ref="">New</a>
-        <a ref="">Large</a>
-        <a ref="">Small</a>
+        <ul class="navigation">
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">Old</a></li>
+        <li><a href="#">New</a></li>
+        <li><a href="#">Large</a></li>
+        <li><a href="#">Small</a></li>
+        </ul>
     </nav>
    </header>
 
