changes added in css

--- a/place.html
+++ b/place.html
@@ -65,7 +65,7 @@
                 <div class="label">Wind:</div>
                 <div class="value">3 km/h</div>
                 <div class="label">Wind Chill:</div>
-                <div class="value">31.6°C</div>
+                <div class="value"></div>
             </div>
         </section>
     </main>
